vaapi_video_decode_accelerator: stop using deprecated fields

These 3 fields are needed for FMO, which libva did not and will never
implement. As a result libva 2.0.0 has deprecated these fields. Stop
using them to avoid compiler warnings are we upgrade to it.

BUG=chromium:785754
TEST=made sure h264 HW decoding was still working after this CL.

Cq-Include-Trybots: master.tryserver.chromium.android:android_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel
Change-Id: I69310b37a50e7ceb74b347f0b727e01102d46df0
Reviewed-on: https://chromium-review.googlesource.com/774340
Reviewed-by: Pawel Osciak <posciak@chromium.org>
Commit-Queue: Alexandre Courbot <acourbot@chromium.org>
Cr-Commit-Position: refs/heads/master@{#517303}
Former-commit-id: 0da36bb28408a46e074c0178fae7a4a85e289d89